[package]
name = "todo-bin"
version = "0.1.0"
edition = "2018"
license = "GPL-3.0-only"
description = "Simple todo cli program written in rust"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.31.0", features = ["bundled"] }
colored = "2"
directories = "5.0.1"
dialoguer = "0.11.0"

[[bin]]
name = "todo"
path = "src/main.rs"
